feat: rewrite backend with typeorm
